--enable-preview in docker img