@@ -2,4 +2,4 @@ FROM bellsoft/liberica-openjdk-alpine:21
 COPY build/*.jar app.jar
 
 EXPOSE 8060
-ENTRYPOINT ["java", "-jar", "/app.jar"]
+ENTRYPOINT ["java", "-jar", "--enable-preview", "/app.jar"]
